; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-vt8500/extr_vt8500.c_vt8500_restart.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-vt8500/extr_vt8500.c_vt8500_restart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pmc_base = common dso_local global i64 0, align 8
@VT8500_PMSR_REG = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @vt8500_restart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vt8500_restart(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = load i64, i64* @pmc_base, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %2
  %8 = load i64, i64* @pmc_base, align 8
  %9 = load i64, i64* @VT8500_PMSR_REG, align 8
  %10 = add nsw i64 %8, %9
  %11 = call i32 @writel(i32 1, i64 %10)
  br label %12

12:                                               ; preds = %7, %2
  ret void
}

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
